WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 251816
REGRESSION (
258819@main
): Wolfram Alpha dropdown box has repaint artifacts
https://bugs.webkit.org/show_bug.cgi?id=251816
Summary
REGRESSION (258819@main): Wolfram Alpha dropdown box has repaint artifacts
zalan
Reported
2023-02-06 14:22:12 PST
<
rdar://104966985
>
Attachments
Patch
(4.04 KB, patch)
2023-02-06 14:25 PST
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(7.51 KB, patch)
2023-02-07 12:47 PST
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(9.42 KB, patch)
2023-02-07 16:19 PST
,
zalan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2023-02-06 14:25:04 PST
Created
attachment 464872
[details]
Patch
Simon Fraser (smfr)
Comment 2
2023-02-06 15:22:37 PST
Comment on
attachment 464872
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=464872&action=review
> Source/WebCore/rendering/RenderBlockFlow.cpp:3762 > + // However at this point with such high IFC coverage, the subsequent layout is very likely to be IFC again.
This is the kind of comment that will go stale fairly fast. I'd suggest rewriting this in a way that is more future-proof.
zalan
Comment 3
2023-02-06 15:36:54 PST
(In reply to Simon Fraser (smfr) from
comment #2
)
> Comment on
attachment 464872
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=464872&action=review
> > > Source/WebCore/rendering/RenderBlockFlow.cpp:3762 > > + // However at this point with such high IFC coverage, the subsequent layout is very likely to be IFC again. > > This is the kind of comment that will go stale fairly fast. I'd suggest > rewriting this in a way that is more future-proof.
I agree such comments may go stale fast in general, but I am somewhat convinced it's not going to be the case here (i.e. we don't go back to performing more legacy line layout) and also in practice this part of the code will be completely removed/restructured very soon with the upcoming "partial layout" work (I consider this as more of a FIXME comment.)
zalan
Comment 4
2023-02-06 15:44:42 PST
(In reply to zalan from
comment #3
)
> (In reply to Simon Fraser (smfr) from
comment #2
) > > Comment on
attachment 464872
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=464872&action=review
> > > > > Source/WebCore/rendering/RenderBlockFlow.cpp:3762 > > > + // However at this point with such high IFC coverage, the subsequent layout is very likely to be IFC again. > > > > This is the kind of comment that will go stale fairly fast. I'd suggest > > rewriting this in a way that is more future-proof. > I agree such comments may go stale fast in general, but I am somewhat > convinced it's not going to be the case here (i.e. we don't go back to > performing more legacy line layout) and also in practice this part of the > code will be completely removed/restructured very soon with the upcoming > "partial layout" work (I consider this as more of a FIXME comment.)
or I could just move this part to the commit message.
Darin Adler
Comment 5
2023-02-07 09:41:09 PST
Comment on
attachment 464872
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=464872&action=review
>>>> Source/WebCore/rendering/RenderBlockFlow.cpp:3762 >>>> + // However at this point with such high IFC coverage, the subsequent layout is very likely to be IFC again. >>> >>> This is the kind of comment that will go stale fairly fast. I'd suggest rewriting this in a way that is more future-proof. >> >> I agree such comments may go stale fast in general, but I am somewhat convinced it's not going to be the case here (i.e. we don't go back to performing more legacy line layout) and also in practice this part of the code will be completely removed/restructured very soon with the upcoming "partial layout" work (I consider this as more of a FIXME comment.) > > or I could just move this part to the commit message.
I don’t think that Simon means there will be *less* IFC coverage in the future. But "at this point" is intrinsically about a moment in time. I think he just wants you to reword to say the subsequent layout is likely to be IFC again, without saying "at this point". That’s future-proof until we get rid of non-IFC entirely, I think.
Darin Adler
Comment 6
2023-02-07 09:41:56 PST
Comment on
attachment 464872
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=464872&action=review
>>>>> Source/WebCore/rendering/RenderBlockFlow.cpp:3762 >>>>> + // However at this point with such high IFC coverage, the subsequent layout is very likely to be IFC again. >>>> >>>> This is the kind of comment that will go stale fairly fast. I'd suggest rewriting this in a way that is more future-proof. >>> >>> I agree such comments may go stale fast in general, but I am somewhat convinced it's not going to be the case here (i.e. we don't go back to performing more legacy line layout) and also in practice this part of the code will be completely removed/restructured very soon with the upcoming "partial layout" work (I consider this as more of a FIXME comment.) >> >> or I could just move this part to the commit message. > > I don’t think that Simon means there will be *less* IFC coverage in the future. But "at this point" is intrinsically about a moment in time. I think he just wants you to reword to say the subsequent layout is likely to be IFC again, without saying "at this point". > > That’s future-proof until we get rid of non-IFC entirely, I think.
And yes, considering a shorter comment, with a more thorough explanation in the commit message, is a good idea. This comment is long enough to be hard to follow.
zalan
Comment 7
2023-02-07 12:27:23 PST
alternatively we could shorten the repaint rect by doing something along the lines of auto repaintRect = clippedOverflowRectForRepaint(containerForRepaint().renderer); repaintRectangle({ repaintRect.x(), repaintRect.y(), repaintRect.width(), *m_previousModernLineLayoutContentBoxLogicalHeight }, false); (as opposed to call repaint()) but I don't think a tall container with constantly changing short content is a super common case.
zalan
Comment 8
2023-02-07 12:47:27 PST
Created
attachment 464893
[details]
Patch
zalan
Comment 9
2023-02-07 16:19:42 PST
Created
attachment 464899
[details]
Patch
EWS
Comment 10
2023-02-08 06:37:04 PST
Committed
260008@main
(f5f87a80a556): <
https://commits.webkit.org/260008@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464899
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug