Cherry-pick f5f87a80a556. rdar://problem/104966985

REGRESSION (258819@main): Wolfram Alpha dropdown box has repaint artifacts
    https://bugs.webkit.org/show_bug.cgi?id=251816
    <rdar://104966985>

    Reviewed by Antti Koivisto.

    Due to eager display content invalidation, repaints issued after calling RenderBlockFlow::invalidateLineLayoutPath produce empty rects.

    Normally this invalidation call is followed by a layout which will eventually issue another repaint. This second repaint, with no partial layout support in IFC (and most content are now covered by IFC)
    we will most likely be a full, though redundant repaint.
    (note that this newly introduced repaint may be overly inflated when tall container has constantly changing short inline content)

    * LayoutTests/fast/repaint/text-content-shrinks-repaint-expected.txt: Added.
    * LayoutTests/fast/repaint/text-content-shrinks-repaint.html: Added.
    * Source/WebCore/rendering/RenderBlockFlow.cpp:
    (WebCore::RenderBlockFlow::invalidateLineLayoutPath):

    Canonical link: https://commits.webkit.org/260008@main

Canonical link: https://commits.webkit.org/259548.141@safari-7615-branch